@@ -8,7 +8,6 @@ copyright_year   = 2010
 [BundleInspector]
 
 [@Author::RWSTAUNER]
-builder = both
 ; config pluginbundle synopsis is ini example rather than perl code
 -remove = Test::Synopsis
 
@@ -40,9 +39,6 @@ Dist::Zilla::Plugin::Test::PodSpelling = 2
 ; bug fixes
 Devel::Cover = 1.00
 Dist::Zilla::App::Command::cover = 0
-
-;  only runs tests once
-Dist::Zilla::Plugin::DualBuilders = 1.001
 
 Dist::Zilla::Plugin::TaskWeaver = 0.101620
 
